<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mindorks.framework.mvvm.ui.main.MainActivity">

    <data>
        <import type="android.view.View" />

        <variable
            name="handlers"
            type="com.privalia.albert.challenge.presentation.ui.handler.MainActivityHandler" />

        <variable
            name="viewModel"
            type="com.privalia.albert.challenge.presentation.ui.viewModel.MainViewModel" />
    </data>


    <FrameLayout
        style="@style/WidthMatchHeightMatch">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/clRootView"
                style="@style/WidthMatchHeightMatch"
                android:clipChildren="false">

                <LinearLayout
                    android:id="@+id/activityMain"
                    style="@style/WidthMatchHeightMatch"
                    android:orientation="vertical">

                    <android.support.design.widget.AppBarLayout
                        style="@style/WidthMatchHeightWrap"
                        app:elevation="5dp">

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbar"
                            style="@style/toolbar"
                            app:subtitleTextColor="@color/white"
                            app:title="@string/app_name"
                            app:titleTextAppearance="@style/toolbar.titleText"
                            app:titleTextColor="@color/white" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/grey_300" />

                    </android.support.design.widget.AppBarLayout>

                    <LinearLayout
                        android:id="@+id/layout_order"
                        android:visibility="@{viewModel.hasQuery() ? View.INVISIBLE : View.VISIBLE}"
                        style="@style/WidthMatchHeightWrap.horizontal">
                        <Spinner
                            android:id="@+id/sort_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                        
                        <ImageButton
                            android:id="@+id/sort_direction"
                            android:onClick="@{(v) -> handlers.onSortDirClicked(v)}"
                            style="@style/WidthWrapHeightWrap"
                            android:src="@{viewModel.sortDir ? @drawable/ic_arrow_upward_black_24dp : @drawable/ic_arrow_downward_black_24dp}"/>
                    </LinearLayout>

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/text_search"
                        android:text="@={viewModel.query}"
                        android:afterTextChanged="@{handlers.onTextChanged}"
                        style="@style/WidthMatchHeightWrap" />

                    <android.support.v7.widget.RecyclerView
                        android:background="@color/grey_500"
                        android:id="@+id/recycler_movies"
                        style="@style/WidthMatchHeightWrap"
                        app:movie_items="@{viewModel.movieObservableArrayList}" />
                </LinearLayout>

            </android.support.design.widget.CoordinatorLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"/>

    </FrameLayout>

</layout>